--- a/weather.html
+++ b/weather.html
@@ -1,6 +1,6 @@
 <head>
 <meta charset='utf-8'>
-<script src="tools/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 <script type='text/javascript'>
 $.getJSON("config.json").then(function(conf) {
   $("#weather").load(conf.cdir + "/" + conf.wbase + "/index.php");
